# CMake2

./: CMakeLists.txt  Figure.cpp  Quadrilateral.cpp  Triangle.cpp  isosceles_triangle.cpp  isosceles_triangle.h  parallelogram.cpp
